style.css
:root {
    --main-bg-color: #e0f2fe;
    --items-bg-color: rgb(255, 255, 255);
    --shadow-bg-color: rgba(128, 128, 128, .3);
    --sidebar-bg-color: #0ea5e9;
    --sidebarHover-bg-bolor: #0a85be;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    display: grid;
    grid-template-columns: 1.25fr 4fr 1.75fr;
    grid-template-rows: 15vh 45vh 35vh 5vh;
}

/* =========
    Sidebar
   ========= */

#sidebar {
    position: sticky;
    font-size: 1.5vw;
    font-weight: bold;
    background-color: var(--sidebar-bg-color);
    grid-area: 1 / 1 / 4 / 2;
    display: grid;
    align-items: space-between;
}

.mainTasks {
    list-style-type: none;
    padding-left: 2.5vw;
}

.mainTasks li {
    margin-bottom: 25px;
    padding: 5px 0 5px 15px;
}

.mainTasks li:hover {
    transform: scale(1.1);
    border-radius: 20px;
    background-color: var(--sidebarHover-bg-bolor);
    width: 10vw;
}

.helpTasks {
    list-style-type: none;
    margin-bottom: 0;
    padding-left: 2.5vw;
}

.helpTasks li {
    margin-top: 25px;
    padding: 5px 0 5px 15px;
}

.helpTasks li:hover {
    transform: scale(1.1);
    border-radius: 20px;
    background-color: var(--sidebarHover-bg-bolor);
    width: 10vw;
}

/* =========
    Header
   ========= */

#header {
    background-color: rgb(252, 242, 230);
    grid-area: 1 / 2 / 2 / 4;
    box-shadow: 0 5px var(--shadow-bg-color);
    display: grid;
    grid-template-columns: 55vw 25vw;
    grid-template-rows: 5vh 10vh;
}

#upperBarLeft {
    grid-area: 1 / 1 / 2 / 2;
    align-self: center;
    justify-self: center;
}

#searchBar {
    width: 50vw;
    margin: auto;
    border-radius: 10px;
    background-color: var(--main-bg-color);
    height: 2vw;
}

#upperBarRight {
    grid-area: 1 / 2 / 2 / 3;
    justify-self: end;
    align-self: center;
}

.avatar {
    width: 50px;
    height: auto;
}

#lowerBarLeft {
    grid-area: 2 / 1 / 3 / 2;
    align-self: end;
}

#lowerBarLeft .name {
    font-size: 2.5rem;
    font-weight: bold;
}

#lowerBarRight {
    grid-area: 2 / 2 / 3 / 3;
    justify-self: end;
    align-self: end;
}

#lowerBarRight button {
    margin: 5px;
    border-radius: 20px;
    width: 70px;
    height: 35px;
    background-color: var(--sidebar-bg-color);
    border: none;
}


/* =========
    Projects
   ========= */

#projects {
    display: grid;
    grid-area: 2 / 2 / 4 / 3;
    gap: 15px;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    overflow: auto;
    background-color: var(--main-bg-color);
    padding: 20px;
    margin-top: 5px;
}

.projects {
    margin: 20px 0px 10px 0px;
    padding: 10px;
    border-left: .5px solid var(--shadow-bg-color);
    border-top: .5px solid var(--shadow-bg-color);
    border-radius: 10px;
    height: auto;
    background-color: var(--items-bg-color);
    box-shadow: 5px 5px var(--shadow-bg-color);
}

.projects:hover {
    transform: scale(1.05);
}

/* =========
    Announcements
   ========= */

#announcements {
    grid-area: 2 / 3 / 3 / 4;
    background-color: var(--main-bg-color);
    margin-top: 5px;
    padding-bottom: 10px;
}

#announcements>div {
    display: grid;
    border-left: .5px solid var(--shadow-bg-color);
    border-top: .5px solid var(--shadow-bg-color);
    margin: 20px 15px 10px 15px;
    border-radius: 10px;
    padding: 15px;
    overflow: auto;
    background-color: var(--items-bg-color);
    box-shadow: 5px 5px var(--shadow-bg-color);
}

/* =========
    Trending
   ========= */

#trending {
    grid-area: 3 / 3 / 4 / 4;
    background-color: var(--main-bg-color);
    overflow: auto;
}

#trending>div {
    border-left: .5px solid var(--shadow-bg-color);
    border-top: .5px solid var(--shadow-bg-color);
    margin: 20px 15px 10px 15px;
    border-radius: 10px;
    padding: 15px;
    background-color: var(--items-bg-color);
    box-shadow: 5px 5px var(--shadow-bg-color);
}

.trendingAvatar {
    width: 50px;
    height: auto;
    border-radius: 50%;
    font-weight: 700;
}

#trending>div>span {
    font-weight: bold;
    padding-left: 2rem;
    font-size: 1.5rem;
}

/* =========
    Footer
   ========= */

#footer {
    grid-area: 4 / 1 / 5 / 4;
    display: flex;
    background-color: dimgrey;
    color: #FFF;
    font-weight: bold;
    align-items: center;
    justify-content: center;
}

@media (max-width:1000px) {
    #searchBar {
        width: 25vw;
    }

    #lowerBarRight button {
        width: 40px;
    }
}

